[package]
name = "morus"
version = "0.1.5"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "MORUS authenticated cipher (MORUS-1280-128)"
keywords = ["morus", "cipher", "aead", "crypto"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-morus"
repository = "https://github.com/jedisct1/rust-morus"
categories = ["no-std", "cryptography"]
readme = "README.md"

[dev-dependencies]
aes-gcm = { version = "0.10.1", default-features = false, features = ["aes", "getrandom", "heapless", "stream"] }
benchmark-simple = "0.1.7"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["getrandom", "heapless", "rand_core", "reduced-round", "stream"] }
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["std"]
std = []

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
strip = "symbols"
